Fixed issue with dot colors

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<img id="reward" src="Resources/WEKwE.gif" hidden>
 		<p>Input your guesses and then hit submit!</p>
 		<p id="legend">
-			<span class="correct">&#9899 = a correct number is in the correct spot</span><br>
-			<span class="almost">&#9899 = a correct number is in the wrong spot</span><br>
-			<span class="incorrect">&#9899 = wrong number</span><br>
+			<span class="dot correctDot"></span><span class="correct"> = a correct number is in the correct spot</span><br>
+			<span class="dot almostDot"></span><span class="almost"> = a correct number is in the wrong spot</span><br>
+			<span class="dot incorrectDot"></span><span class="incorrect"> = wrong number</span><br>
 			Note: the order of the cirlces in the log do not correspond to the order of the numbers.<br>
 			Green circles will always be first, followed by yellow, then red. For instance, a green <br>
 			circle followed by a yellow circle and two red circles means one of your numbers is correct<br>
